Rewrite multi-site logical call resolution and statistics